# las-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: bench_batch.py  bench_compare.py  bench_lasio_baseline.py  bench_ops.py  bench_read.py  bench_write.py  collect.py  conftest.py  generate.py  pytest.ini  report.py  results.csv  run.sh
python/las_rs/: __init__.py  exceptions.py
src/: errors.rs  las_file.rs  lib.rs  py_bindings.rs  types.rs
src/core/: errors.rs  helpers.rs  las_file.rs  mod.rs  types.rs
src/python/: conversions.rs  errors.rs  io.rs  las_file_py.rs  mod.rs  types_py.rs
src/reader/: data.rs  header.rs  mod.rs  sections.rs
src/writer/: mod.rs
tests/: conftest.py  test_pending_refactor.py  test_phase1_curve_item.py  test_phase1_header_item.py  test_phase1_section_items.py  test_phase1_section_items_extended.py  test_phase2_read_basic.py  test_phase2_read_edge_cases.py  test_phase2_read_edge_extended.py  test_phase2_read_header_line.py  test_phase2_read_header_line_extended.py  test_phase2_read_kwargs.py  test_phase3_data_extended.py  test_phase3_data_parsing.py  test_phase3_null_extended.py  test_phase3_null_policies.py  test_phase3_wrapped.py  test_phase4_csv_export.py  test_phase4_csv_extended.py  test_phase4_write.py  test_phase4_write_extended.py  test_phase5_curve_ops.py  test_phase5_curve_ops_extended.py  test_phase5_dataframe.py  test_phase5_dataframe_extended.py  test_phase5_depth_extended.py  test_phase5_depth_units.py  test_phase5_encoding.py  test_phase5_encoding_extended.py  test_phase5_json.py  test_phase5_serialization.py  test_phase5_stack_curves.py  test_phase5_stack_extended.py  test_phase6_las30.py  test_phase7_errors.py  test_phase7_file_io.py  test_phase7_properties.py
tests/fixtures/edge_cases/: blank_line_at_start.las  blank_line_in_header.las  bracketed_units.las  colon_in_value.las  comma_decimal.las  comment_lines.las  custom_null.las  dodgy_params.las  dot_in_mnemonic.las  duplicate_mnemonics.las  empty_mnemonic.las  excess_data_columns.las  header_only.las  index_null.las  missing_a_section.las  missing_null.las  missing_vers.las  missing_wrap.las  multiple_empty_mnemonics.las  non_standard_section.las  not_a_las_file.las  null_policy.las  null_policy_common.las  null_policy_runon.las  null_policy_strict.las  runon.las  single_data_row.las  sparse_curves.las  string_data.las  string_data_columns.las  uwi_leading_zero.las
tests/fixtures/encodings/: latin1.las  latin1_bad_bytes.las  utf16_be_bom.las  utf16_le_bom.las  utf16_le_explicit.las  utf8.las  utf8_bom.las
tests/fixtures/v12/: sample_v12.las  sample_v12_minimal.las  sample_v12_wrapped.las
tests/fixtures/v20/: sample_v20.las  sample_v20_minimal.las  (+1 more)
(+2 files in other folders)
