[package]
name = "las_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "las_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
numpy = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1"
encoding_rs = "0.8"
memchr = "2"
fast-float2 = "0.2"
