[package]
name = "las_rs"
version = "0.1.1"
edition = "2021"

[lib]
name = "las_rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["python"]
python = ["dep:pyo3", "dep:numpy"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"], optional = true }
numpy = { version = "0.28", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1"
encoding_rs = "0.8"
memchr = "2"
fast-float2 = "0.2"
