[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "las-rs"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["pytest", "pandas"]

[tool.maturin]
features = ["pyo3/extension-module", "python"]
python-source = "python"
module-name = "las_rs._native"
